# mptk

./: .project  AUTHORS  CMakeLists.txt  CTestConfig.cmake  FINAL_SPEC.txt  INSTALL  Makefile.am  README.txt  TODO  config.h.cmake  configure.in  make_code_stats.sh  make_configure.sh  mp_system.h  path.xml.in  path.xml.install
MPTK-plugin-branch/src/tinyxml/: CMakeLists.txt
doc/: CMakeLists.txt  Getting Started.odt  Makefile.am  doxygen_config
doc/GettingStarted/: CMakeLists.txt
doc/GettingStarted/latex_src/: GettingStarted.tex  GettingStartedContent.tex  GettingStartedContent2.tex  GettingStartedContent3.tex  GettingStartedContent4.tex  GettingStartedContent5.tex  GettingStartedContent7.tex  GettingStartedContentPython.tex  GettingStartedIntro.tex
doc/misc/: CMake_english_linux_MAC_only.odt  CMake_english_win32_only.odt  CMake_english_win32_with_visual_studio_only.odt  Cdash & Pipol.odt  Eclipse_for_MPTK_english.odt  MPTK_plugin_system.odt
doc/refman/: CMakeLists.txt  Makefile.am  doxygen_config.in  doxygen_configGUI.in  doxygen_configGUIWITHDOT.in  doxygen_configSTD.in  doxygen_configSTDWITHDOT.in
doc/short_description/: CMakeLists.txt  Makefile.am
doc/short_description/latex_src/: short_description.tex
doc/userman/: CMakeLists.txt  Makefile.am  latexdoc_block_xmltags.m  latexdoc_block_xmltags.m.in  userman.tex
doc/userman/latex_src/: FailedCmake.eps  GettingStartedContent1.tex  GettingStartedContent3.tex  GettingStartedContent5.tex  GettingStartedContent6.tex  MPTK4OSX.tex  MPTK4Windows.tex  VisualStudioCmake.eps  WindowsCmake.eps  biblio_MP.bib  bookeditFileToolbar.eps  bookeditPage.eps  mpcycle.eps  mpcycle.fig  plonk.ps  shortdescription.tex  userman.tex  usermanIntro.tex
plugin_system/src/libdsp_windows/: CMakeLists.txt  dsp_windows.c  dsp_windows.h
plugin_system/src/matlab/: CMakeLists.txt  INSTALL  LICENSE  bookread.cpp  bookread.m  bookwrite.m  dictread.cpp  dictread.m  dictwrite.cpp  loadenv.cpp  loadenv.m  releaseenv.cpp
src/: CMakeLists.txt  Makefile.am
src/gui/: CMakeLists.txt  GUI_SPECS.txt  Makefile.am  Makefile.old  MptkGuiApp.cpp  MptkGuiApp.h  MptkGuiAtomDessin.cpp  MptkGuiAtomDessin.h  MptkGuiAtomView.cpp  MptkGuiAtomView.h  MptkGuiAudio.cpp  MptkGuiAudio.h  MptkGuiCMapZoomEvent.cpp  MptkGuiCMapZoomEvent.h  MptkGuiCallback.cpp  MptkGuiCallback.h  MptkGuiColorMapView.cpp  MptkGuiColorMapView.h  MptkGuiColormaps.cpp  MptkGuiColormaps.h  MptkGuiConsoleView.cpp  MptkGuiConsoleView.h  MptkGuiDeleteViewEvent.cpp  MptkGuiDeleteViewEvent.h  MptkGuiDessin.cpp  MptkGuiDessin.h  MptkGuiDownEvent.cpp  MptkGuiDownEvent.h  MptkGuiExtendedSignalView.cpp  MptkGuiExtendedSignalView.h  MptkGuiExtendedTFView.cpp  MptkGuiExtendedTFView.h  MptkGuiExtendedView.h  MptkGuiFrame.cpp  MptkGuiFrame.h  MptkGuiGlobalConstants.h  MptkGuiHandlers.cpp  MptkGuiHandlers.h  MptkGuiLicenseDialog.cpp  MptkGuiLicenseDialog.h  (+36 more)
src/gui/Qt/: CMakeLists.txt
src/gui/bitmaps/: Nb.xpm  SNR.xpm  iterate_once.xpm  pause_unactive.xpm  play_one.xpm  quit.xpm
src/gui/doc/: descriptionClasses.txt  divers.txt  rapport_ihm.odt  slides.odp
src/gui/portaudio_v18_1/: configure
src/libdsp_windows/: CMakeLists.txt  Makefile.am  dsp_windows.c  dsp_windows.h  system.h
src/libmptk/: CMakeLists.txt  DEVEL_NOTES  HOWTO_ADD_A_CLASS  MakeRegressionConstantsH.cmake  Makefile.am  anywave_server.cpp  anywave_server.h  anywave_table.cpp  anywave_table.h  anywave_table_io_interface.cpp  anywave_table_io_interface.h  anywave_table_scanner.lpp  atom.cpp  atom.h  atom.in.cpp  atom_factory.cpp  atom_factory.h  atom_param.cpp  atom_param.h  block.cpp  block.h  block_factory.cpp  block_factory.h  book.cpp  book.h  cmpd_core.cpp  cmpd_core.h  convolution.cpp  convolution.h  dct_interface.cpp  dct_interface.h  dict.cpp  dict.h  dict.in.cpp  dll.h  dll_elf.cpp  dll_win32.cpp  double_index_book.cpp  double_index_book.h  fft_interface.cpp  (+52 more)
src/libmptk/atom_classes/: TEMPLATE_atom.cpp  TEMPLATE_atom.h  TEMPLATE_block.cpp  TEMPLATE_block.h  anywave_atom.cpp  anywave_atom.h  anywave_block.cpp  anywave_block.h  anywave_hilbert_atom.cpp  anywave_hilbert_atom.h  anywave_hilbert_block.cpp  anywave_hilbert_block.h  atom_classes.cpp  atom_classes.h  block_io_interface.cpp  block_io_interface.h  chirp_block.cpp  chirp_block.h  constant_atom.cpp  constant_block.cpp  constant_block.h  dict_scanner.lpp  dirac_atom.cpp  dirac_atom.h  dirac_block.cpp  dirac_block.h  gabor_atom.cpp  gabor_atom.h  gabor_block.cpp  gabor_block.h  harmonic_atom.cpp  harmonic_atom.h  harmonic_block.cpp  harmonic_block.h  mclt_abstract_block.cpp  mclt_abstract_block.h  mclt_atom.h  mclt_block.cpp  mdct_atom.cpp  mdct_atom.h  (+7 more)
src/matlab/: CMakeLists.txt  GettingStarted.m.in  LICENSE  README  ROADMAP  anywavetableread.cpp  anywavetableread.m  anywavetablewrite.cpp  anywavetablewrite.m  bookread.cpp  bookread.m  bookwrite.cpp  bookwrite.m  cmpdecomp.cpp  cmpdecomp.m  dictread.cpp  dictread.m  dictwrite.cpp  dictwrite.m  getmptkinfo.cpp  getmptkinfo.m  mpdecomp.cpp  mpdecomp.m  mprecons.cpp  mprecons.m  releaseenv.m  sigread.cpp  sigread.m  sigwrite.cpp  sigwrite.m
src/matlab/classes/: mexAnywaveTable.cpp  mexDict.cpp  mexSignal.cpp  mptk4matlab.cpp  mptk4matlab.h
src/matlab/experimental/: BuildDictionary.m  CMakeLists.txt  INSTALL  LICENSE  MPtoolbaricons.mat  README  atomrecons_exp.cpp  atomrecons_exp.m  bookedit_exp.m  (+23 more)
src/plugin/: CMakeLists.txt
src/python/: CMakeLists.txt  PKG-INFO  mptkplot.py  pyMPTK.cpp  pyMPTK.h  pyMPTK_atom.cpp  pyMPTK_book.cpp  pyMPTK_decompose.cpp  setup.py
src/tests/: CMakeLists.txt  Makefile.am  test_anywave.cpp  test_behaviour_in_noise.cpp  test_convolution.cpp  test_convolution.m  test_fft.cpp  test_mask.cpp  test_messaging.cpp  test_mp.cpp  test_mpcycle.sh.in  test_parabolic_regression.cpp  test_win.c  test_win.cpp  test_windowLen.cpp
src/tinyxml/: CMakeLists.txt  tinyxmlparser.cpp
src/utils/: CMakeLists.txt  Makefile.am  cmpd.cpp  getopt.c  getopt.h  getopt1.c  getopt_int.h  gettext.h  gpd.cpp  mpcat.cpp  mpd.cpp  mpd_core.h  mpd_demix.cpp  mpf.cpp  mpr.cpp  mpview.cpp  readme.txt  system.h
(+480 files in other folders)
